# excel_parser

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  tables.sql
src/: controller.py  db.py  models.py  repository.py
test_data/: empty_file.xlsx  file1.xlsx  file2.xlsx
